# pomo-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  pyproject.toml  setup.py
.claude/skills/pomo/: SKILL.md
.github/workflows/: ci.yml
docs/: phase-2-plan.md  pomo-spec-v0.md
docs/superpowers/specs/: 2026-04-04-pomo-cli-ux-design.md
src/pomo_cli/: __main__.py  cli.py  mcp_server.py  models.py  service.py  store.py  timer.py
tests/: test_cli.py  test_mcp_server.py  test_open_source_release.py  test_service.py  test_store.py  test_timer.py
