[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pomo-cli"
version = "0.1.0"
description = "Local pomodoro CLI for agent-assisted workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Sam Li"},
]
keywords = ["pomodoro", "cli", "productivity", "agents", "mcp"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Samlilol/pomo-cli"
Repository = "https://github.com/Samlilol/pomo-cli"
Issues = "https://github.com/Samlilol/pomo-cli/issues"

[project.optional-dependencies]
mcp = ["mcp>=1,<2"]

[project.scripts]
pomo = "pomo_cli.cli:main"
pomo-mcp = "pomo_cli.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
